# investment-advisor

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: prd.snapshot.md  sbi_csv_spec.md
scripts/: import_sbi_csv.py  run_weekly.sh
src/investment_advisor/: config.py  main.py  notion_client.py  prd_loader.py
src/investment_advisor/agents/: llm_adapter.py  prompts.py  report_writer.py  runner.py
src/investment_advisor/news/: collector.py  models.py  summarizer.py
src/investment_advisor/portfolio/: fire.py  models.py  repository.py  snapshot.py
src/investment_advisor/sbi_csv/: importer.py  mapper.py  parser.py
src/investment_advisor/utils/: logging.py  money.py
tests/: test_fire.py  test_news_collector.py  test_portfolio.py  test_sbi_csv_mapper.py  test_sbi_csv_parser.py
tests/fixtures/: google_news_sample.xml  sbi_sample.csv
