[project]
name = "investment-advisor"
version = "0.1.0"
description = "Personal AI investment advisor — Notion as Single Source of Truth"
requires-python = ">=3.11"
dependencies = [
    "notion-client>=2.2.1",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/investment_advisor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
